--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body{
         text-align: center;
         display: block;
         padding: 10px 10px;
+        border-radius: 5px;
 }
 .formgroup{
     display: block;
