--- a/style.css
+++ b/style.css
@@ -8,14 +8,23 @@ body{
 
 }
 .survey{
-    width: 300px;
+    width: 500px;
     height: auto;
     background-color: white;
         margin: 100px auto;
-        text-align: center;
+    
         display: block;
         padding: 10px 10px;
         border-radius: 5px;
+}
+.survey h2{
+    text-align: center;
+    margin-bottom: 10px;
+    font-weight: bold;
+    font-size: 30px;
+}
+label{
+    display: block;
 }
 .formgroup{
     display: block;
@@ -32,4 +41,8 @@ input[type="range"]{
 .btnn{
     width: 100%;
     padding: 4px 10px;
+   background-color:  #333;
+   color: white;
+   border-radius: 4px;
+   padding: 5px;
 }
