--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body{
     text-align: center;
     margin-bottom: 10px;
     font-weight: bold;
-    font-size: 30px;
+    font-size: 1.5em;
 }
 label{
     display: block;
